corrected issue with timer going negative and with transitions getting stuck.

--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(gray, #343a40);
+    background-image: linear-gradient(#343a40, #000000);
 }
 
 #quizMain {
-    background-color: #343a40;
+    background-color: #343a4000;
     color: #f0f0f0;
 }
 
 #hud {
-    background-color: #353535;
+    background-color: #343a4000;
 }
 
 #questions, #answers, #menuCard {
@@ -22,6 +22,10 @@ body {
 #menuRow {
     margin-bottom: -200px;
 }
+
+/* #menuCard {
+    background-image: linear-gradient(#fcfcd8, #dddddd);
+} */
 
 .startFadeIn {
     position: relative;
